--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -3,12 +3,29 @@
 
 {% block content %}
 
-<div class="jumbotron text-center">
+<div class="container">
+
+
+    <h2>Page View Report</h2>
+    
+    
+    <ul>
+    
+        {% for user_info in user_infos %}
+            <li>{{ user_info.Name }}</li>
+            <li>{{ user_info.Major }}</li>
+        {% endfor %}
+    
+    </ul>
+    
+</div>
+
+<!--<div class="jumbotron text-center">
   <div class="container">
     <a href="/" class="lang-logo">
       <img src="{% static 'lang-logo.png'%}">
     </a>
-    <h1>Getting Started with Python on Heroku</h1>
+    <h1>Getting Started with Python on Test2</h1>
     <p>This is a sample Python application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
     <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span> Getting Started with Python</a>
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/python-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
@@ -50,9 +67,10 @@
         <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
       </ul>
     </div>
-  </div> <!-- row -->
+  </div>
    <div class="alert alert-info text-center" role="alert">
     Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
   </div>
 </div>
+-->
 {% endblock %}
