--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Python Getting Started on Test</title>
+<title>Loversity</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="shortcut icon" href="#" />
   <style type="text/css">
+    body {
+        background-color: #000;
+        color:#fff
+    }
+
     .jumbotron {
         background: #532f8c;
         color: white;
@@ -25,7 +30,8 @@
         margin: 1em auto 2em
     }
     .navbar+.jumbotron {
-        margin-top: -20px
+        margin-top: -20px;
+        padding-bottom: 20px
     }
     .jumbotron .lang-logo {
         display: block;
@@ -38,44 +44,154 @@
         border: 2px solid white
     }
 
+    .w3-image {
+        margin-top: -20px;
+        width: 80%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .w3-display-container {
+        background-color: #f7d7d8;
+    }
+
+    .w3-display-middle {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%)
+    }
+
+    .w3-margin-top {
+        margin-top: 16px!important
+    }
+
+    .w3-center {
+        text-align: center!important
+    }
+
+    .w3-xxlarge {
+        font-size: 100px!important
+    }
+
+    .w3-text-white, .w3-hover-text-white:hover {
+        color: #fff!important
+    }
+
+    .w3-padding {
+        padding: 8px 16px!important
+    }
+
+    .w3-black, .w3-hover-black:hover {
+        color: #fff!important;
+        background-color: #000!important
+    }
+
+    w3-opacity-min.w3-opacity-min {
+        opacity: 0.75
+    }
+
+    @media (max-width:600px) {
+        .w3-hide-small {
+            display: none!important
+        }
+    }
+
+    .w3-text-light-grey, .w3-hover-text-light-grey:hover, .w3-text-light-gray, .w3-hover-text-light-gray:hover {
+        color: #f1f1f1!important;
+        text-shadow: 2px 2px 5px #e67f80;
+    }
+
+    .w3-button, .w3-button:hover {
+        border: none;
+        display: inline-block;
+        padding: 8px 16px;
+        vertical-align: middle;
+        overflow: hidden;
+        text-decoration: none;
+        color: #000;
+        background-color: #f1f1f1;
+        text-align: center;
+        cursor: pointer;
+        white-space: nowrap;
+        width: 100%;
+        text-align: left;
+        padding: 8px 16px;
+        width: 25%
+    }
+
+    .w3-button:hover {
+        color: #000!important;
+        background-color: #ccc!important
+    }
+
+    .w3-block {
+        display: block;
+        width: 25%
+    }
+
+    h2 {
+        font-size: 50px;
+        color: #fff;
+    }
+
+    p {
+        font-size: 20px;
+        color: #fff;
+    }
+
+    input[type="text"], textarea {
+
+        background-color : #000; 
+
+    }
+
+    input[type="submit"], textarea {
+
+        color : #000; 
+
+    }
+
+    .success {
+        text-align: center;
+    }
+
+    .success-image {
+        margin-top: -20px;
+        width: 30%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
   </style>
 </head>
+
+{% block content %}
 <body>
 <nav class="navbar navbar-default navbar-static-top navbar-inverse">
   <div class="container">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
+        <a href="/"><span class="glyphicon glyphicon-home"></span>  Home</a>
       </li>
       <li>
-        <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Heroku Works</a>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started with Ruby on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started with Node on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-php">Getting Started with PHP on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-java">Getting Started with Java on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-clojure">Getting Started with Clojure on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-scala">Getting Started with Scala on Heroku</a></li>
-            <li class="divider"></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-heroku-and-connect-without-local-dev">Getting Started on Heroku with Heroku Connect</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
-          </ul>
+        <a href="/submit/"><span class="glyphicon glyphicon-list"></span>  Submit</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> Heroku Dev Center</a>
+        <a href="https://github.com/awaseem2/loversity"><span class="glyphicon glyphicon-console"></span> Check Out On Github!</a>
       </li>
     </ul>
   </div>
 </nav>
 
-{% block content %}{% endblock %}
+{% endblock %}
 
 </body>
 </html>
