added more questions and expanded database

--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -149,7 +149,19 @@
 
     }
 
+    input[type="number"], textarea {
+        background-color : #000; 
+
+    }
+
     input[type="submit"], textarea {
+
+        color : #000; 
+
+    }
+
+
+    input[type="select"], textarea {
 
         color : #000; 
 
