--- a/hello/templates/successEmpty.html
+++ b/hello/templates/successEmpty.html
@@ -34,15 +34,8 @@
 <br/>
 
 <div class="success"><h1>Thank you! We have received your submission.</h1>
-    <p>Here is information on your closest match:</p>
-    <br/>
-    <p>Name: {{user_info.name}}</p>
-    <p>Email: {{user_info.email}}</p>
-    <p>Major: {{user_info.major}}</p>
-    <p>Age: {{user_info.age}}</p>
-    <br/>
-    <br/>
-    <br/>
+    <p>Unforunately, we do not have enough data to find a match for you.</p>
+    <p>Don't fret! We will email you as soon as we've found your perfect match!</p>
 
 
 
