refactored methods and added proper matching

--- a/hello/templates/successEmpty.html
+++ b/hello/templates/successEmpty.html
@@ -34,7 +34,7 @@
 <br/>
 
 <div class="success"><h1>Thank you! We have received your submission.</h1>
-    <p>Unforunately, we do not have enough data to find a match for you.</p>
+    <p>Unfortunately, we do not have enough data to find a match for you.</p>
     <p>Don't fret! We will email you as soon as we've found your perfect match!</p>
 
 
